--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Hello World</h1>
-    <p>This is my first website!</p>
+    <p>This is my first website! Check out netlify</p>
     <img src="/Taped Doodle.png">
 </body>
 </html>
