--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Hello World</h1>
     <p>This is my first website! Check out netlify</p>
-    
+    <img src="/Taped Doodle.png">
 </body>
 </html>
